Maintain engine type if possible when switching between IS/Clan tech base.